feat: Add MCP server for ROS bag analysis with essential tools
- Implemented the MCP server in `mcp_rosbag_server/server.py` to facilitate memory capabilities for ROS bag files.
- Introduced various tools for bag management, message retrieval, and metadata extraction.
- Configured logging and caching mechanisms for improved performance and debugging.
- Created a `pyproject.toml` file for project metadata, dependencies, and build configuration.

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,7 +3,6 @@
 .gitignore
 
 # Exclude documentation
-*.md
 LICENSE
 
 # Exclude test and log files
@@ -25,6 +24,7 @@ build/
 rosbags/
 
 # Exclude virtual environments
+.venv/
 venv/
 env/
 ENV/
