--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "numpy>=1.24",
     "plotly>=5.0",
     "pyyaml>=6.0",
+    "matplotlib>=3.10.8",
 ]
 
 [project.optional-dependencies]
